style: ajustar wrap del text